hphp/test/zend/good/Zend/tests/jump09.php.expectf

Fatal error: 'goto' into loop or switch statement is disallowed in %s/jump09.php on line 1
